# crc64-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: crcspeed.rs
src/: crc_table.rs  lib.rs  main.rs
src/crc64/: crc64_tab.rs  lib.rs  main.rs
