[package]
name = "crc64"
version = "2.0.0"
keywords = ["hashing", "checksum"]
description = "CRC64 checksum implementation"
edition = "2021"

homepage = "https://github.com/badboy/crc64-rs"
documentation = "https://docs.rs/crc64"
repository = "https://github.com/badboy/crc64-rs"

license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "crc64"
path = "src/lib.rs"

[[bin]]
name = "crc64"
path = "src/main.rs"
doc  = false
